Update and rename shahu.html to index.html

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
        <h2>Our Happy Memories</h2>
               <div class="photo-slideshow">
  
-         <img id="slideshow" src="photo1.jpg" alt="Our memory">
+         <img id="slideshow" src="image/photo1.jpg" alt="Our memory">
        
         
 
@@ -191,8 +191,8 @@
             // You can replace this with something more elaborate
         }
 const slideshowImages = [
-    "photo1.jpg",
-    "photo2.jpg",
+    "image/photo1.jpg",
+    "image/photo2.jpg",
     "photo3.jpg",
     "photo4.jpg",
     "photo5.jpg",
