--- a/index.html
+++ b/index.html
@@ -193,10 +193,10 @@
 const slideshowImages = [
     "image/photo1.jpg",
     "image/photo2.jpg",
-    "photo3.jpg",
-    "photo4.jpg",
-    "photo5.jpg",
-    "photo6.jpg"
+    "image/photo3.jpg",
+    "image/photo4.jpg",
+    "image/photo5.jpg",
+    "image/photo6.jpg"
 ];
 
 let currentImageIndex = 0;
