--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 <body>
     <header>
         <div class="container">
-            <h1>For My Beautiful <span class="heart">?</span> princess shahina</h1>
+            <h1>For My Beautiful <span class="heart">👸🏻</span> princess shahina</h1>
             <p>You make every day brighter</p>
         </div>
     </header>
